# DCC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml
.github/: pull_request_template.md
cmake/: dcc-config.cmake.in  dcc-version-generated.h.in  dcc.pc.in  llam-bundled-config.cmake.in  llam-bundled.pc.in
docs/: api.md  architecture.md  coding-style.md  getting-started.md  index.md  live-validation.md  production-playbooks.md  release.md  troubleshooting.md  versioning.md
examples/: app_ping.c  basic.c  cluster_rollout.c  discord_game.c  discord_game_ai.c  discord_game_command.c  discord_game_env.c  discord_game_gateway.c  discord_game_interactions.c  discord_game_internal.h  hot_reload_bot.c  interaction_webhook.c  live_gateway_soak.c  live_voice_probe.c  pingpong.c
fuzz/: json_fuzzer.c
src/: message_link.c  oauth2.c  snowflake.c  webhook_events.c
tests/: app_autocomplete_sugar_smoke.c  app_dx_sugar_smoke.c  app_env_mentions_smoke.c  app_message_command_smoke.c  app_smoke.c  app_wait_filter_smoke.c  cluster_chaos_smoke.c  cluster_gateway_smoke.c  cluster_identify_budget_smoke.c  cluster_restart_smoke.c  cluster_restart_suppress_smoke.c  cluster_smoke.c  cluster_status_route_smoke.c  cluster_supervisor_policy_restart_smoke.c  cluster_supervisor_policy_smoke.c  component_session_smoke.c  component_v2_smoke.c  event_object_wait_smoke.c  event_surface_smoke.c  event_wait_convenience_smoke.c  fake_dave.c  gateway_chaos_smoke.c  gateway_control_smoke.c  gateway_smoke.c  generated_app_contract.py  hot_reload_canary_integration_smoke.c  hot_reload_canary_smoke.c  hot_reload_health_route_smoke.c  hot_reload_invalid_ready_worker.c  (+56 more)
tests/generated_app_compile/: CMakeLists.txt
tests/package_consumer/: CMakeLists.txt  hot_reload_module.c  main.c  package_consumer_app.c  package_consumer_app_messages.c  package_consumer_checks.h  package_consumer_cluster.c  package_consumer_hot_reload.c  package_consumer_interaction.c  package_consumer_interaction_server.c  package_consumer_official_surface.c  package_consumer_symbols.h  package_consumer_voice.c  package_consumer_wait.c
tests/package_consumer/symbols/: cluster.h  hot_reload.h  interaction_server.h  interactions.h  rest_messages.h  rest_resources.h  tasks.h  voice.h  wait.h
(+2793 files in other folders)
